# madara-db-visualizer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  PLAN.md  README.md  compose.yaml  index.html  install.ps1  install.sh  output.css  render.yaml
.github/workflows/: auto-release-bootstrapper.yml  deploy.yml  release-bootstrapper.yml  release-toolchain.yml  update-alias.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: embedded.rs  lib.rs  main.rs
crates/api/tests/: smoke.rs
crates/db-reader/: Cargo.toml
crates/db-reader/src/: blocks.rs  contracts.rs  lib.rs  queries.rs  raw.rs  state_diff.rs  transactions.rs  version.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/makimono/: Cargo.toml
crates/makimono/src/: main.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/schema/src/definitions/: blocks.yaml  bonsai.yaml  classes.yaml  contracts.yaml  events.yaml  mempool.yaml  messaging.yaml  meta.yaml  transactions.yaml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docker/: nginx.conf
docs/: API.md  DEVELOPMENT.md  makimono-scratchpad.md
sample-db/: 000009.sst  000010.sst  000011.sst  000012.sst  000013.sst  000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  000024.sst  000025.sst  000026.sst  000027.sst  000029.sst  000030.sst  000031.sst  000032.sst  IDENTITY  LOG  LOG.old.1769772121096438  LOG.old.1769772121165418  MANIFEST-000005  MANIFEST-000068  OPTIONS-000007  OPTIONS-000070
scripts/: build_dist.sh  down.sh  patch_wasm_table.py  up.sh
