[package]
name = "api"
version.workspace = true
edition = "2021"

[dependencies]
visualizer-types = { path = "../types" }
db-reader = { path = "../db-reader" }
indexer = { path = "../indexer" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
hex = "0.4"
