[package]
name = "makimono"
version.workspace = true
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
url = "2"
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"

# Windows toolchain packages are zip
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

db-reader = { path = "../db-reader" }

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
